[package]
name = "opengltest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "lib/gl" }
glutin = "0.28.0"
image = "0.24.2"
libc = "0.2"

[dependencies.vlc-rs]
git = "https://code.videolan.org/videolan/vlc-rs.git"

[dependencies.libvlc-sys]
git = "https://code.videolan.org/videolan/vlc-rs.git"
